# welt

./: .env.sample  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compatibility.sh  lambda_function.py  main.py  manifest.yml  mise.toml  pyproject.toml  template.yaml
.github/: renovate.json
.github/workflows/: compatibility.yml
app/: __init__.py  agent_logic.py  agent_service.py  bolt_listeners.py  bolt_logic.py  bolt_middlewares.py  converse_logic.py  env.py  interrupt_logic.py  message_logic.py  slack_file_logic.py  slack_file_service.py  slack_reaction_service.py  slack_stream_service.py  stream_logic.py
docs/: files.md  harness.md  interrupts.md  lambda.md  wire.md
examples/agent/: README.md  agent.py  main.py  requirements.txt  welt_io.py
tests/: agent_logic_test.py  bolt_logic_test.py  converse_logic_test.py  env_test.py  interrupt_logic_test.py  lambda_function_test.py  message_logic_test.py  slack_file_logic_test.py  stream_logic_test.py
