# Dependency management with uv.
# Welt is a deployable Slack frontend, not a distributable package, so this file
# defines no build backend — it only pins dependencies and tool configuration.

[project]
name = "welt"
version = "0.0.0"
description = "Slack frontend for AI agents on Amazon Bedrock AgentCore Runtime."
# Floor matches the oldest AL2023-based AWS Lambda Python runtime (python3.12),
# so the Lambda entry point runs on every current-generation managed runtime.
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Takashi Iwamoto", email = "hello@iwamot.com" }]
dependencies = [
    "slack-bolt==1.30.0",
    # Welt makes Slack Web API calls directly through AsyncWebClient, so it
    # depends on slack-sdk explicitly (not only transitively via slack-bolt).
    "slack-sdk==3.43.0",
    # Bolt's AsyncApp imports aiohttp at module load (its async web server).
    "aiohttp==3.14.3",
    # invoke_agent_runtime (AgentCore Runtime) is called through boto3.
    "boto3==1.43.54",
]

# The dev group is included by `uv sync` and `uv run` by default (and
# excluded from the container by `uv sync --no-dev`), so a plain
# `uv run main.py` works for local development.
[dependency-groups]
dev = [
    # botocore's login credential provider (`aws login` sessions) needs the
    # CRT; deployed runtimes authenticate with an IAM role instead.
    "awscrt==0.36.1",
    "pip-licenses==5.5.5",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
]

[tool.uv]
exclude-newer = "1 day"

[tool.ruff]
include = ["*.py", "app/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
extend-select = [
    "F", "W", "I", "UP", "C4", "FA", "ISC", "ICN", "RET", "TID", "PTH", "TD", "S",
]
ignore = ["S101"]

[tool.ty.src]
include = [".", "app", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["main", "lambda_function", "app"]
branch = true

[tool.coverage.report]
show_missing = true
